compiler/testData/diagnostics/testsWithJvmBackend/duplicateJvmSignature/erasure/typeParameter.kt
// FIR_IDENTICAL
// !DIAGNOSTICS: -UNUSED_PARAMETER

<!CONFLICTING_JVM_DECLARATIONS!>fun <T> foo(x: T): T {null!!}<!>
<!CONFLICTING_JVM_DECLARATIONS!>fun foo(x: Any): Any {null!!}<!>
